Fix intro animation on mobile

--- a/_sass/landing_page.scss
+++ b/_sass/landing_page.scss
@@ -1,5 +1,5 @@
 body {
-    height: 100vmin;
+    height: 100lvh;
     position: relative;
 }
 
@@ -21,5 +21,13 @@ header.top {
     transform: translateY(0px) translateX(-50%);
     h1 {
         opacity: 0;
+    }
+}
+
+@media 
+    only screen and (max-width: 620px)
+    {  
+    header.top {
+            top: 10px;
     }
 }
