--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -32,7 +32,7 @@ body {
 
     font-size: 0.9em; //overall font size
     margin: 0;
-    min-height: 100vmin;
+    min-height: 100dvh;
 
     display: flex;
     flex-direction: column;
